Fix responsive spacing.

--- a/quadrat/assets/theme.css
+++ b/quadrat/assets/theme.css
@@ -119,7 +119,6 @@ ul ul {
 	display: grid;
 	-moz-column-gap: 1em;
 	     column-gap: 1em;
-	grid-template-columns: 50% 50%;
 	grid-template-rows: auto;
 	grid-template-areas: "notes notes" "author author" "email url" "comment comment" "cookies-consent cookies-consent" "form-submit form-submit";
 }
