--- a/quadrat/sass/blocks/_post-comments.scss
+++ b/quadrat/sass/blocks/_post-comments.scss
@@ -7,7 +7,6 @@
 	form {
 		display: grid;
 		column-gap: 1em;
-		grid-template-columns: 50% 50%;
 		grid-template-rows: auto;
 		grid-template-areas:
 			"notes notes"
